--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: CSci 395.86 Open Source Software Development, Spring 2019
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.pastepic.xyz/image/Lxx1L
+avatar: http://sprites.pokecheck.org/i/579.gif
 
 # CUSTOMIZE
 # Flags below are optional - customize them if you wish or leave them without 
