--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: CSci 395.86 Open Source Software Development, Spring 2019
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://sprites.pokecheck.org/i/579.gif
+avatar: https://wiki.p-insurgence.com/images/6/63/579.png
 
 # CUSTOMIZE
 # Flags below are optional - customize them if you wish or leave them without 
