--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name: Xiangmin Mo
 # Short bio or description (displayed in the header)
 # Replace "Course Name" and "Semester" by the actual course name and semester,
 # e.g.: CSci 395.86 Open Source Software Development, Spring 2019
-description: CSci 395.86 Open Source Software Development, Spring 2019
+description: CSCI395.86 Open Source Software Development, Spring 2019
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
